Initialize GUI. Create window, show list of books