@@ -5,13 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ua.edu.sumdu</groupId>
-    <artifactId>pr15</artifactId>
+    <artifactId>pr16</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>25.0.2</javafx.version>
+        <main.class.console>ua.edu.sumdu.Main</main.class.console>
+        <main.class.gui>ua.edu.sumdu.gui.MainApp</main.class.gui>
     </properties>
 
     <dependencies>
@@ -28,6 +31,20 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
+        </dependency>
+
+        <!-- JavaFX Controls -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- JavaFX Graphics -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
         </dependency>
     </dependencies>
 
@@ -49,6 +66,25 @@
                     <show>private</show>
                 </configuration>
             </plugin>
+
+            <!--
+               JavaFX Maven Plugin
+               Запуск GUI:  mvn javafx:run
+               Запуск консолі залишається через:  mvn exec:java -Dexec.mainClass=ua.edu.sumdu.Main
+           -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>${main.class.gui}</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
